--- a/StoryTracker/Storyboard.storyboard
+++ b/StoryTracker/Storyboard.storyboard
@@ -111,11 +111,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="projectCell" id="JAI-sb-qsn">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="projectCell" id="JAI-sb-qsn">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="JAI-sb-qsn" id="qc7-3j-th4">
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="LqU-fq-1q1" kind="push" identifier="storiesSegue" id="a1F-4e-5ef"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -131,6 +134,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YdV-Vi-IyK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1601" y="394"/>
+        </scene>
+        <!--Stories-->
+        <scene sceneID="GUC-rw-4O1">
+            <objects>
+                <tableViewController id="LqU-fq-1q1" customClass="StoriesViewController" customModule="StoryTracker" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="uIa-qo-T8i">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <connections>
+                            <outlet property="dataSource" destination="LqU-fq-1q1" id="Ufn-gY-nxC"/>
+                            <outlet property="delegate" destination="LqU-fq-1q1" id="MuD-Xc-MLq"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Stories" id="Rv3-DK-kWm"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="doU-4g-KA7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2074" y="674"/>
         </scene>
         <!--Item-->
         <scene sceneID="Rc8-a4-R3F">
